--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,7 @@
 	font-size:1.4em;
 	width:100px;
 	padding-top:2px;
+	word-wrap: break-word;
 }
 
 /* ---------- MAIN SECTION & CONTENTS----------------*/
@@ -74,7 +75,7 @@
 }
 
 .btn-custom {
-    background-color: hsl(101, 63%, 40%) !important;
+    background-color: hsl(101, 63%, 40%) ;
     background-repeat: repeat-x;
     background-image: -khtml-gradient(linear, left top, left bottom, from(#5ec72d), to(#4ea625));
     background-image: -moz-linear-gradient(top, #5ec72d, #4ea625);
@@ -84,7 +85,7 @@
     background-image: -o-linear-gradient(top, #5ec72d, #4ea625);
     background-image: linear-gradient(#5ec72d, #4ea625);
     border-color: #4ea625 #4ea625 hsl(101, 63%, 38%);
-    color: #fff !important;
+    color: #fff;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.13);
     -webkit-font-smoothing: antialiased;
     -webkit-border-radius: 3px;
@@ -178,10 +179,28 @@ img.thumbnail-3{
 	float:left;
 	margin-left: 175px;
 	margin-top: 20px;
- }
+}
 
- .edit-play-wrapper .btn-custom{
+.edit-play-wrapper .btn-custom{
  	float:left;
  	margin-left:15px;
  	width:75px;
+}
+
+.right-icons{
+ 	position: absolute;
+ 	right:0px;
+ 	width:65px;
+}
+.right-icons img{
+ 	padding:5px 5px 0 0;
  }
+
+.loading-icon{
+	position:absolute;
+	top:35%; 
+	left:50%;
+	width:50px; 
+	height:50px;
+	display: none;
+}
